--- a/app/src/main/res/values-et/help.xml
+++ b/app/src/main/res/values-et/help.xml
@@ -230,7 +230,7 @@
 
     <string name="help_wallet"><![CDATA[
         <h1>Rahakott</h1>
-        <h2>Street Mode</h2>
+        <h2>Avalik režiim</h2>
         <p>Street mode can be enabled/disabled in the menu or Gunther\'s head icon. In this mode, your
         balance is not shown on any screen so you can safely use your wallet on the street, a pub or
         other public place. Previous transactions are also hidden. New transactions will be shown, so
