--- a/app/src/main/res/menu/list_context_menu.xml
+++ b/app/src/main/res/menu/list_context_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/action_streetmode"
+        android:orderInCategory="50"
+        android:title="@string/menu_streetmode" />
+
+    <item
         android:id="@+id/action_receive"
         android:orderInCategory="100"
         android:title="@string/menu_receive" />
