Replace private mode translation to low profile mode

--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -171,8 +171,8 @@
 
     <string name="help_wallet"><![CDATA[
         <h1>錢包介面</h1>
-        <h2>隱私模式</h2>
-        <p>隱私模式可以藉由點選 Gunther 的頭像或在選單中啟用/關閉。
+        <h2>低調模式</h2>
+        <p>低調模式可以藉由點選 Gunther 的頭像或在選單中啟用/關閉。
         在這模式中你的帳戶餘額不會顯示在任何的畫面中，因此你可以安全的在街上、酒吧等公共場所使用錢包。
         先前的交易記錄也會一併被隱藏，但新的交易則會正常顯示，所以你仍然可以看到你即時發送或是收到的 MoneroJ ！</p>
         <h2>掃描</h2>
