--- a/app/src/main/res/values-fr/help.xml
+++ b/app/src/main/res/values-fr/help.xml
@@ -256,51 +256,51 @@
     ]]></string>
 
     <string name="help_node"><![CDATA[
-        <h1>Nodes</h1>
-        <h2>TL;DR</h2>
-        <p>Refresh the nodes list by pulling down &amp; bookmark 3&#8211;5 nodes to allow Monerujo
-        to choose the best one for you!</p>
-        <h2>What&apos;s a Node?</h2>
-        <p>Monerujo uses a Remote Node (sometimes also called Daemon) to communicate with
-        the Monero Network without having to download and store a copy of the
-        whole blockchain itself.<p>
-        <h2>Node List</h2>
-        <p>If the list is empty, you can either add new nodes manually or let Monerujo
-        scan the network for you. Or both. Read on&#8230;</p>
-        <p>The node list shows all currently known nodes. Additionally, the timestamp
-        of the latest block known to each node is shown under the node name. An icon
-        representing the node&apos;s response behaviour
-        (which indicates the level of connectivity to be expected)
-        is shown next to each node.</p>
-        <p>Any node in the list can be bookmarked for later use.
-        Nodes which are not bookmarked will be forgotten.<p>
-        <p>Monerujo will choose the optimal bookmarked node each time you use it.
-        It does this by checking the blockheight (how up-to-date
-        is the node?) as well as the response behaviour (how fast does the node respond to requests?).</p>
-        <p>The list is sorted by these characteristics, so the top node would be the one Monerujo
-        would choose right now. The bottom of the list would show very slow or unavailable nodes.</p>
-        <h2>Add a Node</h2>
-        <p>By touching the &quot;Add Node&quot; button at the bottom, you will be asked to
-        enter the node details in the following dialog.
-        The &quot;Address&quot; is the hostname or IP-address of the node - this is the only
-        mandatory entry.
-        Enter the &quot;Port&quot; if the node runs on a non-default port (e.g. 18089).
-        You can also optionally name the node, so you can identify it easier later on.
-        Some nodes require credentials to use them. Enter the provided username &amp;
-        password in the appropriate fields. Now you can &quot;Test&quot; these setting.
-        The &quot;Test Results&quot; will display the blockheight, response time and actual IP used.
-        The result may also be an error - usually because the hostname provided is
-        not reachable in a sensible amount of time or the credentials are incorrect.
-        Or the hostname/port combination does not point to an actual Monero Node!
-        Once the test passes (no error) - you&apos;re set to press &quot;OK&quot; to save &amp;
-        bookmark this node.</p>
-        <h2>Scan for Nodes</h2>
-        <p>Additionally, you can scan the network for nodes. Monerujo will start
-        scanning the network for Remote Nodes on port 18089. It begins by asking your
-        bookmarked nodes for other peers in the Monero P2P network and then continues
-        by asking those for their peers, and so on. If you have no bookmarked nodes
-        (or they don&apos;t tell us about their peers),
-        Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
-        scan stops when it finds 10 remote nodes in total.</p>
+        <h1>Nœuds</h1>
+        <h2>En résumé</h2>
+        <p>Rafraichit la liste de nœuds en faisant glisser vers le bas &amp; met en favoris 3 à 5 nœuds pour permettre à Monerujo
+        de choisir le meilleur pour vous !</p>
+        <h2>Qu’est-ce qu’un Nœud ?</h2>
+        <p>Monerujo utilise un Nœud distant (parfois appelé un Démon) pour communiquer avec
+        le réseau Monero sans avoir à télécharger et stocker une copie complète de la
+        chaîne de blocs elle-même.<p>
+        <h2>Liste de Nœuds</h2>
+        <p>Si la liste est vide, vous pouvez soit ajouter de nouveaux nœuds manuellement, ou laisser Monerujo
+        scanner le réseau pour vous. Ou les deux. Lire la suite&#8230;</p>
+        <p>La liste des nœuds affiche tous les nœuds connus. De plus, l’horodatage
+        du dernier bloc connu par chaque nœud est indiqué en dessous du nom du nœud. Une icône
+        représenant le comportement de réponse du nœud
+        (qui indique le niveau de connectivité à escompter)
+        est affiché à coté de chaque nœud.</p>
+        <p>N’importe quel nœud de la liste peut être ajouté aux favoris pour un usage ultérieur.
+        Les nœuds qui ne sont pas en favoris seront oubliés.<p>
+        <p>Monerujo choisira le nœud optimal parmi les favoris à chaque fois que vous l’utiliserez.
+        Ceci est fait en vérifiant la hauteur de bloc (à quel point le nœud
+        est à jour ?) de même que le comportement de réponse (à quelle vitesse le nœud répond aux requêtes ?).</p>
+        <p>La liste est triée selon ces caractéristiques, afin que le nœud le plus haut soit celui que Monerujo
+        utilisera tout de suite. Le bas de la liste montrera des nœuds très lents ou indisponibles.</p>
+        <h2>Ajouter un Nœud</h2>
+        <p>En touchant le bouton &quot;Ajouter un Nœud&quot; en bas, il vous sera demandé
+        d’entrer les détails du nœud dans la boite de dialogue suivante.
+        L’&quot;Adresse&quot; est le nom d’hôte ou l’adresse IP du nœud - c’est le seul
+        champ obligatoire.
+        Entrer le &quot;Port&quot; si le nœud ne fonctionne pas sur un port par défaut (p.e. 18089).
+        Vous pouvez optionnellement donner un nom au nœud, afin que vous puissiez plus facilement l’identifier plus tard.
+        Certains nœud nécessitent des identifiants pour les utiliser. Entrer les nom d’utilisateur &amp;
+        mot de passe dans les champs appropriés. Maintenant vous pouvez &quot;Tester&quot; ces paramêtres.
+        Le &quot;Résultat du test&quot; indiquera la hauteur de bloc, le temps de réponse et l’adresse IP actuellement utilisée.
+        Le résultat pourrait également être une erreur - habituellement car le nom d’hôte fourni n’est
+        pas joignable pendant un temps non négligeable, ou que les identifiants sont incorrects.
+        Ou la combinaison nom d’hôte/port ne renvoie pas vers un nœud Monero réel !
+        Une fois que le test réussit (sans erreur) - vous êtes prêt à appuyer sur &quot;OK&quot; pour sauvegarder &amp;
+        mettre ce nœud en favori.</p>
+        <h2>Rechercher des Nœuds</h2>
+        <p>De plus, vous pouvez rechercher des nœuds sur le réseau. Monerujo va commencer à
+        parcourir le réseau à la recherche de nœuds distants sur le port 18089. Il commence par demander à vos
+        nœuds en favoris d’autres homologues dans le réseau Monero P2P puis continue
+        en demandant leurs homologues à ceux-ci, et ainsi de suite. Si vous n’avez pas de nœuds en favoris
+        (ou s’ils ne communiquent pas leurs homologues),
+        Monerujo va communiquer directement avec les nœuds d’ensemencement codés en dur dans Monero. La
+        recherche s’arrête lorsqu’un total de 10 nœuds distant est récupéré.</p>
     ]]></string>
 </resources>
