--- a/app/src/main/res/menu/create_wallet_seed.xml
+++ b/app/src/main/res/menu/create_wallet_seed.xml
@@ -7,6 +7,13 @@
         android:icon="@drawable/ic_help_white_24dp"
         android:orderInCategory="100"
         android:title="@string/menu_help"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_ledger_seed"
+        android:icon="@drawable/ic_ledger_restore"
+        android:orderInCategory="200"
+        android:title="@string/menu_ledger_seed"
+        app:showAsAction="never" />
 
 </menu>
