--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -189,51 +189,33 @@
     ]]></string>
 
     <string name="help_node"><![CDATA[
-        <h1>Nodes</h1>
-        <h2>TL;DR</h2>
-        <p>Refresh the nodes list by pulling down &amp; bookmark 3&#8211;5 nodes to allow Monerujo
-        to choose the best one for you!</p>
-        <h2>What&apos;s a Node?</h2>
-        <p>Monerujo uses a Remote Node (sometimes also called Daemon) to communicate with
-        the Monero Network without having to download and store a copy of the
-        whole blockchain itself.<p>
-        <h2>Node List</h2>
-        <p>If the list is empty, you can either add new nodes manually or let Monerujo
-        scan the network for you. Or both. Read on&#8230;</p>
-        <p>The node list shows all currently known nodes. Additionally, the timestamp
-        of the latest block known to each node is shown under the node name. An icon
-        representing the node&apos;s response behaviour
-        (which indicates the level of connectivity to be expected)
-        is shown next to each node.</p>
-        <p>Any node in the list can be bookmarked for later use.
-        Nodes which are not bookmarked will be forgotten.<p>
-        <p>Monerujo will choose the optimal bookmarked node each time you use it.
-        It does this by checking the blockheight (how up-to-date
-        is the node?) as well as the response behaviour (how fast does the node respond to requests?).</p>
-        <p>The list is sorted by these characteristics, so the top node would be the one Monerujo
-        would choose right now. The bottom of the list would show very slow or unavailable nodes.</p>
-        <h2>Add a Node</h2>
-        <p>By touching the &quot;Add Node&quot; button at the bottom, you will be asked to
-        enter the node details in the following dialog.
-        The &quot;Address&quot; is the hostname or IP-address of the node - this is the only
-        mandatory entry.
-        Enter the &quot;Port&quot; if the node runs on a non-default port (e.g. 18089).
-        You can also optionally name the node, so you can identify it easier later on.
-        Some nodes require credentials to use them. Enter the provided username &amp;
-        password in the appropriate fields. Now you can &quot;Test&quot; these setting.
-        The &quot;Test Results&quot; will display the blockheight, response time and actual IP used.
-        The result may also be an error - usually because the hostname provided is
-        not reachable in a sensible amount of time or the credentials are incorrect.
-        Or the hostname/port combination does not point to an actual Monero Node!
-        Once the test passes (no error) - you&apos;re set to press &quot;OK&quot; to save &amp;
-        bookmark this node.</p>
-        <h2>Scan for Nodes</h2>
-        <p>Additionally, you can scan the network for nodes. Monerujo will start
-        scanning the network for Remote Nodes on port 18089. It begins by asking your
-        bookmarked nodes for other peers in the Monero P2P network and then continues
-        by asking those for their peers, and so on. If you have no bookmarked nodes
-        (or they don&apos;t tell us about their peers),
-        Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
-        scan stops when it finds 10 remote nodes in total.</p>
+        <h1>節點</h1>
+        <h2>懶人版教學</h2>
+        <p>下拉節點列表即可重新整理節點狀態，你可以手動添加三至五個節點，Monerujo 將會自動為你挑選最佳的節點！</p>
+        <h2>什麼是節點？</h2>
+        <p>Monerujo 必須透過遠端節點 (有時稱則為 Daemon ) 連接至 Monero 交易網路，透過這種方式就不需要下載和儲存整個區塊鏈的副本。<p>
+        <h2>節點列表</h2>
+        <p>如果列表是空白的，你可以自行手動新增節點或是讓 Monerujo 為你掃描網路上的可用節點，以下是詳細教學。</p>
+        <p>節點列表中顯示了目前已知的節點，另外，在名稱下方的的時間戳記表示為其最後更新區塊的時間。
+        每個節點旁邊會有一個圖示來呈現他的狀態 (通常代表著其連接的品質)。</p>
+        <p>每個在列表中的節點都可以加上書籤標記以保留到後續使用，沒有加上書籤的節點則會被捨棄。<p>
+        <p>Monerujo 會在你每次使用錢包時，在書籤內選擇最好的節點。這是透過檢查該節點的區塊高度 (節點資料有多即時？) 與回應狀態 (節點的反應有多迅速？) 來達成。</p>
+        <p>列表會依這些資訊做排序，因此排在最上面的節點就是 Monerujo 目前會使用的節點，列表底部則是反應非常遲鈍或是無法使用的節點。</p>
+        <h2>增加新的節點</h2>
+        <p>點選下方的「新增節點」，你將會被要求輸入節點的資訊。
+        在「位置」這欄請輸入節點的網址或是 IP 位址，這是唯一的必填資訊。
+        如果該節點是運作在非預設的連接埠 (譬如是 18089)，請輸入於「連接埠」的欄位中。
+        你也可以命名該節點以方便在後續使用時更容易辨識。
+        若有些節點要求登入資訊，請輸入於「登入名稱」與「密碼」的欄位中。
+        現在你可以按下「測試節點」以檢查節點設定。
+        測試結果將會顯示區塊高度、回應速度與實際的 IP 位址。
+        而測試結果也有可能顯示錯誤，這通常代表著無法在可接受的時間內連接到該節點網址，或是登入資訊設定有誤。
+        也有可能是節點網址與通訊埠的組合有誤而導致無法連接到該 Monero 節點！
+        只要測試結果通過 (沒有錯誤) - 你就可以按下「好的」以儲存該節點並將之加入書籤。</p>
+        <h2>掃描可用的節點</h2>
+        <p>此外，你可以掃描可用的遠端節點，Monerujo 將會掃描網路上開放通訊埠 18089 的遠端節點。
+        首先它會從你的書籤節點先取得 P2P 連接清單，接著再從這些清單內檢查可用的節點。
+        如果你沒有任何書籤節點 (或是書籤節點無法提供它們的連接清單)，Monerujo 將會直接從 Monero 內建的種子節點取得清單。
+        這個掃描功能將會在總共可用節點的數量達到十個後停止。</p>
     ]]></string>
 </resources>
